<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.ProfileFragment">

    <LinearLayout
        android:id="@+id/linear_layout_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_height="60dp"
                android:layout_width="60dp"
                app:srcCompat="@drawable/nexos_logo"
                android:padding="10dp"
                android:background="@color/accent"/>

            <TextView
                android:id="@+id/text_view_name_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/welcome"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_layout_my_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="?attr/selectableItemBackground">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@color/border" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="15dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_profile"
                        tools:ignore="VectorDrawableCompat" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:text="@string/title_profile"
                        android:textSize="16sp"
                         />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        app:srcCompat="@drawable/ic_chevron_right"
                        tools:ignore="VectorDrawableCompat" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@color/border" />
            </LinearLayout>

<!--            <LinearLayout-->
<!--                android:id="@+id/linear_layout_history"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:background="?attr/selectableItemBackground"-->
<!--                android:orientation="vertical">-->

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:gravity="center_vertical"-->
<!--                    android:orientation="horizontal">-->

<!--                    <ImageView-->
<!--                        android:layout_width="30dp"-->
<!--                        android:layout_height="30dp"-->
<!--                        android:layout_margin="15dp"-->
<!--                        android:layout_gravity="center"-->
<!--                        app:srcCompat="@drawable/ic_history" />-->

<!--                    <TextView-->
<!--                        android:layout_width="0dp"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginStart="5dp"-->
<!--                        android:layout_weight="1"-->
<!--                        android:fontFamily="@font/nunito_semi_bold"-->
<!--                        android:text="@string/menu_history_services"-->
<!--                        android:textColor="@color/diverColor"-->
<!--                        android:textSize="16sp" />-->

<!--                    <ImageView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:padding="15dp"-->
<!--                        app:srcCompat="@drawable/ic_arrow_next" />-->
<!--                </LinearLayout>-->

<!--                <View-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="1dp"-->
<!--                    android:layout_marginStart="15dp"-->
<!--                    android:layout_marginEnd="15dp"-->
<!--                    android:background="@color/border" />-->
<!--            </LinearLayout>-->

<!--            <LinearLayout-->
<!--                android:id="@+id/linear_layout_my_address"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:background="?attr/selectableItemBackground"-->
<!--                android:orientation="vertical">-->

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:gravity="center_vertical"-->
<!--                    android:orientation="horizontal">-->

<!--                    <ImageView-->
<!--                        android:layout_width="30dp"-->
<!--                        android:layout_height="30dp"-->
<!--                        android:layout_margin="15dp"-->
<!--                        android:layout_gravity="center"-->
<!--                        app:srcCompat="@drawable/ic_location" />-->

<!--                    <TextView-->
<!--                        android:layout_width="0dp"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginStart="5dp"-->
<!--                        android:layout_weight="1"-->
<!--                        android:fontFamily="@font/nunito_semi_bold"-->
<!--                        android:text="@string/menu_my_address"-->
<!--                        android:textColor="@color/diverColor"-->
<!--                        android:textSize="16sp" />-->

<!--                    <ImageView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:padding="15dp"-->
<!--                        app:srcCompat="@drawable/ic_arrow_next" />-->
<!--                </LinearLayout>-->

<!--                <View-->
<!--                    android:id="@+id/divider3"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="1dp"-->
<!--                    android:layout_marginStart="15dp"-->
<!--                    android:layout_marginEnd="15dp"-->
<!--                    android:background="@color/border" />-->
<!--            </LinearLayout>-->

<!--            <LinearLayout-->
<!--                android:id="@+id/linear_layout_settings"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:background="?attr/selectableItemBackground"-->
<!--                android:orientation="vertical">-->

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:gravity="center_vertical"-->
<!--                    android:orientation="horizontal">-->

<!--                    <ImageView-->
<!--                        android:layout_width="30dp"-->
<!--                        android:layout_height="30dp"-->
<!--                        android:layout_margin="15dp"-->
<!--                        android:layout_gravity="center"-->
<!--                        app:srcCompat="@drawable/ic_settings" />-->

<!--                    <TextView-->
<!--                        android:layout_width="0dp"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginStart="5dp"-->
<!--                        android:layout_weight="1"-->
<!--                        android:fontFamily="@font/nunito_semi_bold"-->
<!--                        android:text="@string/menu_setting"-->
<!--                        android:textColor="@color/diverColor"-->
<!--                        android:textSize="16sp" />-->

<!--                    <ImageView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:padding="15dp"-->
<!--                        app:srcCompat="@drawable/ic_arrow_next" />-->
<!--                </LinearLayout>-->

<!--                <View-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="1dp"-->
<!--                    android:layout_marginStart="15dp"-->
<!--                    android:layout_marginEnd="15dp"-->
<!--                    android:background="@color/border" />-->
<!--            </LinearLayout>-->

            <LinearLayout
                android:id="@+id/linear_layout_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="15dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_logout"
                        tools:ignore="VectorDrawableCompat" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:text="@string/title_logout"
                        android:layout_marginLeft="5dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        app:srcCompat="@drawable/ic_chevron_right"
                        tools:ignore="VectorDrawableCompat" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@color/border" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>